--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
              </section>
         </article>
         <footer>
-            <a href="blog.html#topo">
+            <a href="index.html#topo">
                 Voltar ao topo
             </a>
         </footer>
